ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ExtendsOrImplementsClauses/parserErrorRecovery_ExtendsOrImplementsClause1/input.ts.stderr
error: Expected {, got <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ExtendsOrImplementsClauses/parserErrorRecovery_ExtendsOrImplementsClause1/input.ts:2:1
  |
2 | }
  | ^

